@@ -13,10 +13,14 @@
 			<label index="nbFileGroupByPage">Max records</label>
 			<label index="list_setting">List setting</label>
 			<label index="fileLink">File link</label>
-			<label index="sortingParams">Sorting params</label>
+			<label index="selectParams">Select params</label>
 			<label index="sortName">Sort name</label>
-			<label index="sortName_dateAndTitle">Last Update and title</label>
-			<label index="sortName_lasttstamp">Last update Update</label>
+			<label index="sortName_tstamp">Update date</label>
+			<label index="sortName_crdate">Insert date</label>
+			<label index="sortOrder">Sort order</label>
+			<label index="sortOrder_asc">Ascendant</label>
+			<label index="sortOrder_desc">Descendant</label>
+			<label index="agencies">Agencies</label>
 		</languageKey>
 		<languageKey index="fr" type="array">
 			<label index="configuration">Configuration</label>
@@ -25,10 +29,14 @@
 			<label index="nbFileGroupByPage">Nombre maximum d'enregistrements par page</label>
 			<label index="list_setting">Vue liste</label>
 			<label index="fileLink">Lien vers fichiers</label>
-			<label index="sortingParams">Paramètre de tri</label>
+			<label index="selectParams">Paramètre de sélection</label>
 			<label index="sortName">Trier par</label>
-			<label index="sortName_dateAndTitle">Dernières mise à jour et titre</label>
-			<label index="sortName_lasttstamp">Dernières mise à jour</label>
+			<label index="sortName_tstamp">Date de mise à jour</label>
+			<label index="sortName_crdate">Date d'ajout</label>
+			<label index="agencies">Agences</label>
+			<label index="sortOrder">Ordre de tri</label>
+			<label index="sortOrder_asc">Ascendant</label>
+			<label index="sortOrder_desc">Descendant</label>
 		</languageKey>
 	</data>
 </T3locallang>
