@@ -1,3 +1,7 @@
+2012-03-15 Tsi YANG <tsi@in-cite.net>
+	* Feature: Added sorting configuration on crdate.
+	* Feature: Added select configuration. Possibility to filter on agencies.
+
 2012-03-09 Tsi YANG <tsi@in-cite.net>
 	* Feature: Added sorting configuration. Keeping default on last timestamp and title. Keeping configuration on day and title. The new configuration is on last timestamp only.
 
